<resources>
    <string name="app_name">Lab Control</string>
    <string name="devicesText">Available Devices</string>
    <string name="recyclerViewContentDescr">Available devices</string>
    <string name="computerOsText">Operating System</string>
    <string name="statusText">Status</string>
    <string name="nameText">Name</string>
    <string name="echoMenuItemText">Echo</string>
    <string name="restartMenuItemText">Restart</string>
    <string name="shutdownMenuItemText">Shut down</string>
    <string name="restoreMenuItemText">Restore</string>
    <string name="wakeMenuItemText">Wake on LAN</string>
    <string name="optionsMenuItem">Options</string>
    <string name="optionsMenuItemText">Options</string>
    <string name="selectAllMenuItemText">Select All</string>
    <string name="responsesButtonContentDecr">Responses</string>
    <string name="responsesText">Devices\' Responses</string>
    <string name="nestedScrollViewContDescr">Nested scroll view for multiple responses</string>
    <string name="networkNameText">Network Name</string>
</resources>